--- a/pages/posts/How_can_I_easily_master_programming_techniques.mdx
+++ b/pages/posts/How_can_I_easily_master_programming_techniques.mdx
@@ -1,15 +1,16 @@
 ---
-title: 'How can I easily master programming techniques'
-subtitle: "Making a habit of rewriting the framework's codes by yourself"
+title: "Making a habit of rewriting the framework's codes by myself"
+subtitle: ""
 date: '2022-12-01'
-description: 'Example using Prism / Markdown with Next.js including <strong>switching syntax highlighting</strong> themes.'
+description: 'One of my topics about <strong>How hvae I easily mastered programming techniques</strong>'
 image: '/assets/images/rewrite.jpg'
 tags:
-  - "html"
-  - "js"
-  - "css"
+  - "blog"
+  - "experience"
   - "nodejs"
 ---
+
+
 
 
 # Using Prism with Next.js
