--- a/pages/projects/hexojs.mdx
+++ b/pages/projects/hexojs.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Rewrite Hexo Framework'
 subtitle: 'Prism with Next.js subtitle'
-date: '2022/12/1'
-description: 'This source code simulates the inner workings of **Hexo** framework in very concise code...'
+date: '2020/1/14'
+description: "My <u>Hexo</u> in very concise code reveals the real <u>Hexo framework</u>'s core logics ..."
 image: '/assets/images/hexo.png'
 tags:
   - "hexo"
