--- a/pages/projects/middleware.mdx
+++ b/pages/projects/middleware.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Body parser middleware'
 subtitle: 'Prism with Next.js subtitle'
-date: '2022/01/11'
-description: 'My edition of body parser as Experssjs Middleware which tries to show mainly how to handle files uploading...'
+date: '2020/01/12'
+description: 'My edition of body parser as <u>Experssjs Middleware</u> which handles files uploading ...'
 image: '/assets/images/middleware.jpg'
 tags:
   - "middleware"
