--- a/pages/projects/promisejs.mdx
+++ b/pages/projects/promisejs.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Rebuild JavaScript Promise'
+title: 'Rewrite JavaScript Promise'
 subtitle: 'Prism with Next.js subtitle'
-date: '2020/07/11'
-description: 'This source code simulates the inner workings of **Javascript Promise** in very concise code...'
+date: '2020/01/13'
+description: 'These codes can work like <u>Javascript Promise</u> and <u>Bluebird</u> ...'
 image: '/assets/images/promisejs.png'
 tags:
   - "promise"
@@ -11,7 +11,7 @@ tags:
 github: "github"
 demo: "github"
 ---
-How do JavaScript Promise or "Bluebird" resolve the problem of `asynchronous` invoking, let me show that with my code.
+How does JavaScript Promise or "Bluebird" resolve the problem of `asynchronous` invoking, the following codes are my implementation.
 ```nodejs
 function Promise(fun){
 	this.fun = fun;
