--- a/pages/projects/expressjs.mdx
+++ b/pages/projects/expressjs.mdx
@@ -9,7 +9,7 @@ tags:
   - "web framework"
   - "nodejs"
   - "asynchronous"
-github: "github"
+github: "https://github.com/wangfei20/nodejs-lab/blob/master/express/free.js"
 demo: "github"
 ---
 Expressjs is most popular nodejs application web framework. But for beginers, It's very hard to understand. My "expressjs" shows the core logic of Expressjs, with only 40 rows of codes explaining how express to work.
