--- a/pages/projects/hexojs.mdx
+++ b/pages/projects/hexojs.mdx
@@ -6,8 +6,9 @@ description: "My <u>Hexo</u> in very concise code reveals the real <u>Hexo frame
 image: '/assets/images/hexo.png'
 tags:
   - "hexo"
+  - "markdown"
   - "nodejs"
-github: "github"
+github: "https://github.com/wangfei20/nodejs-lab/blob/master/hexo/hexo.js"
 demo: "github"
 ---
 
