--- a/pages/projects/nodejs.mdx
+++ b/pages/projects/nodejs.mdx
@@ -5,9 +5,10 @@ date: '2020/01/15'
 description: 'These codes is an implementation of <u>nodejs require function</u> ...'
 image: '/assets/images/nodejs.png'
 tags:
+  - "require"
   - "module"
   - "nodejs"
-github: "github"
+github: "https://github.com/wangfei20/nodejs-lab/blob/master/frequire.js"
 demo: "github"
 ---
 
