--- a/pages/projects/promisejs.mdx
+++ b/pages/projects/promisejs.mdx
@@ -8,7 +8,7 @@ tags:
   - "promise"
   - "nodejs"
   - "bluebird"
-github: "github"
+github: "https://github.com/wangfei20/nodejs-lab/blob/master/promise.js"
 demo: "github"
 ---
 How does JavaScript Promise or "Bluebird" resolve the problem of `asynchronous` invoking, the following codes are my implementation.
