--- a/pages/projects/reactjs.mdx
+++ b/pages/projects/reactjs.mdx
@@ -8,7 +8,7 @@ tags:
   - "js"
   - "reactjs"
   - "nodejs"
-github: "github"
+github: "https://github.com/wangfei20/freact/blob/master/freact.js"
 demo: "github"
 ---
 
