--- a/pages/projects/nextjs.mdx
+++ b/pages/projects/nextjs.mdx
@@ -13,10 +13,7 @@ github: "https://github.com/wangfei20/feiwang"
 demo: "github"
 ---
 
-
-# Using Prism with Next.js
-
-[**Fei's Portfolio**](https://portfolio.vercel.app) is my portfolio Website which is deployed on Vercel, and developed by me with Nextjs. depite its highly simple contents which only concludes my portfolio, but technically, it's complicated with the mixture of nextjs's dynamic Routes, Static Site Generation, mdx, multi-themes. Let's see the details.
+[**Fei's Portfolio**](https://portfolio.vercel.app) is my personal Website to show my portfolio, which is deployed on Vercel, and developed by me with Nextjs. depite its highly simple contents which only concludes my portfolio, but technically, it's complicated with the mixture of nextjs's dynamic Routes, Static Site Generation, mdx, multi-themes. Let's see the details.
 
 ## Dynamic Routes
 
