--- a/pages/projects/middleware.mdx
+++ b/pages/projects/middleware.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Body parser middleware'
+title: 'Rewrite multipart middleware'
 subtitle: 'Prism with Next.js subtitle'
 date: '2020/01/12'
 description: 'My edition of body parser as <u>Experssjs Middleware</u> which handles files uploading ...'
