--- a/pages/projects/nodejs.mdx
+++ b/pages/projects/nodejs.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Require Nodejs Module'
+title: 'Rewrite nodejs require function'
 subtitle: 'Prism with Next.js subtitle'
 date: '2020/01/15'
 description: 'These codes is an implementation of <u>nodejs require function</u> ...'
