--- a/pages/projects/reactjs.mdx
+++ b/pages/projects/reactjs.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'The Truth of Reactjs'
+title: 'Rewrite Reactjs'
 subtitle: 'Prism with Next.js subtitle'
 date: '2020/01/16'
 description: 'These are what I call <u>freact</u>, an anologue of <u>reactjs framework</u> ...'
